バージョン差異を追加

--- a/iot-queue-sample.properties
+++ b/iot-queue-sample.properties
@@ -26,45 +26,55 @@ iot.naming.provider.url=failover://(tcp://localhost:61616)?initialReconnectDelay
 # Example        : QUEUE_NAME
 iot.jms.consumer.number=10
 
-# Description	 : Queue Name for request from DC
-# Property Type	 : Mandatory
+# Description    : Queue Name for request to NIP
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.other.request.queue=HPE_Normal_Notf_ReqQ
+iot.other.request.queue=SAMPLE_Normal_Notf_ReqQ
 
-# Description	 : Queue Name for response to DC
-# Property Type	 : Mandatory
+# Description    : Queue Name for response from NIP
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.other.response.queue=HPE_Normal_Notf_ResQ
+iot.other.response.queue=SAMPLE_Normal_Notf_ResQ
 
-# Description	 : Queue Name for request to DC
-# Property Type	 : Mandatory
+# Description    : Queue Name for request to DC
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.this.request.queue=HPE_Normal_ReqQ
+iot.this.request.queue=SAMPLE_Normal_ReqQ
 
-# Description	 : Queue Name for response from DC
-# Property Type	 : Mandatory
+# Description    : Queue Name for response from DC
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.this.response.queue=HPE_Normal_ResQ
+iot.this.response.queue=SAMPLE_Normal_ResQ
 
-# Description	 : Priority queue Name for request from DC
-# Property Type	 : Mandatory
+# Description    : Priority Queue Name for request from NIP
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.other.request.queue.priority=HPE_Priority_Notf_ReqQ
+iot.other.request.queue.priority=SAMPLE_Priority_Notf_ReqQ
 
-# Description	 : Priority queue Name for response to DC
-# Property Type	 : Mandatory
+# Description    : Priority Queue Name for response to NIP
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.other.response.queue.priority=HPE_Priority_Notf_ResQ
+iot.other.response.queue.priority=SAMPLE_Priority_Notf_ResQ
 
-# Description	 : Priority queue Name for request to DC
-# Property Type	 : Mandatory
+# Description    : Priority Queue Name for notification request to NIP
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.this.request.queue.priority=HPE_Priority_ReqQ
+iot.this.request.queue.priority=SAMPLE_Priority_ReqQ
 
-# Description	 : Priority queue Name for response from DC
-# Property Type	 : Mandatory
+# Description    : Priority Queue Name for notification response from NIP
+# Property Type  : Mandatory
 # Example        : QUEUE_NAME
-iot.this.response.queue.priority=HPE_Priority_ResQ
+iot.this.response.queue.priority=SAMPLE_Priority_ResQ
+
+# Description    : Queue name to listen the request from iot to DC
+# Property Type  : Mandatory
+# Example        : QUEUE_NAME
+iot.dc.sessionrequest.queue=SAMPLE_Session_Request
+
+# Description    : Queue name to send the response from DC to IoT
+# Property Type  : Mandatory
+# Example        : QUEUE_NAME
+iot.dc.sessionresponse.queue=SAMPLE_Session_Response
 
 # Description	 : DAVC End point for DC to process sync request
 # Property Type	 : Mandatory
@@ -76,6 +86,7 @@ iot.http.endpoint.uri=http://localhost:8080/davc/rest/postRequestPrimitive
 # Example        : true/false
 iot.onem2m.shortnames.enabled=true
 
+davc.setOnem2mHeader=false
 # Description	 : Flag for proxy to understand it is DC or DAV
 # Property Type	 : Mandatory
 # Example        : true/false
@@ -85,3 +96,48 @@ iot.proxy.isDc=true
 # Property Type	 : Mandatory
 # Example        : /opt/wildfly-9.0.0.Final/modules/com/hpe/iot/propertyconfig/main/deviceMap.csv
 deviceAddress.mapping.filepath=/opt/wildfly-9.0.0.Final/modules/com/hpe/iot/propertyconfig/main/deviceMap.csv
+
+iot.proxy.isMQTTDC=false
+iot.proxy.isCoAPDC=false
+davc.incse.cseid=CSE1000
+
+
+#http restTemplate Default Configurations
+httpConfig.restTemplate.default.max.total.connections=2000
+httpConfig.restTemplate.default.max.connections.per.route=100
+httpConfig.restTemplate.default.read.timeout.milis=6000
+httpConfig.restTemplate.default.keepAlive.duration.milis=5000
+
+# Description    : DC Instance Name
+# Property Type  : Mandatory
+# Example        : LWM2MDC
+dc.instance.name=sample
+
+# Description    : UIOT endpoint configuration for DC registration
+# Property Type  : Mandatory
+# Example        : http://localhost:8080/davc/m2m
+iot.http.endpoint=http://localhost:8080/dc/register?source=
+
+# Description    : HTTP endpoint of DC
+# Property Type  : Mandatory
+# Example        : http://sampledc:8080/sampledc
+dc.http.endpoint=http://localhost:8080/httpdc/post/command/
+
+davc.appl.context=httpdc
+
+# Description    : Number of connections to be used in JMS pool for publishing/producers
+# Property Type  : Mandatory
+# Example        : 100, 200
+iot.jms.pool.max.connections=50
+
+# Description    : Number of sessions to be created per JMS connection by the producer
+# Property Type  : Mandatory
+# Example        : 2, 5
+iot.jms.pool.max.active.sessions.per.connection=2
+
+proxy.coap.port=5783
+iot.jms.activemq.username=davUser
+iot.jms.activemq.password=password
+iot.jms.activemq.authenticationEnabled=false
+iot.jms.pool.max.connections=50
+iot.jms.pool.max.active.sessions.per.connection=2
